--- a/nixpacks.yaml
+++ b/nixpacks.yaml
@@ -4,7 +4,7 @@ phases:
       - hugo
   build:
     cmds:
-      - hugo --minify
+      - hugo --minify -d public
       - echo The build is complete.
 included_files:
-  - /public
+  - public/**
