Add nixPkgs to nixpacks.toml config file

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,5 @@
 [phases.setup]
-cmds = [
-  "curl -L https://github.com/gohugoio/hugo/releases/download/v0.127.0/hugo_0.127.0_Linux-64bit.tar.gz -o hugo.tar.gz",
-  "tar -zxvf hugo.tar.gz -C /usr/local/bin",
-  "rm hugo.tar.gz"
-]
+nixPkgs = ["hugo"]
 
 [phases.build]
 cmds = ["hugo --minify --config hugo.yaml"]
